--- a/files/actions/close.yml
+++ b/files/actions/close.yml
@@ -13,7 +13,7 @@ actions:
     filters:
     - filtertype: pattern
       kind: prefix
-      value: logstash-
+      value: _INDEX_PREFIX_
       exclude:
     - filtertype: age
       source: name
