Skip force merging if no indices present

--- a/files/actions/close.yml
+++ b/files/actions/close.yml
@@ -7,7 +7,7 @@ actions:
       prefixed indices.
     options:
       max_num_segments: 1
-      continue_if_exception: False
+      ignore_empty_list: True
       disable_action: False
     filters:
     - filtertype: pattern
